testing removal of additional dependencies

--- a/bio.html
+++ b/bio.html
@@ -55,8 +55,8 @@
 <style type="text/css" media="all">@import url("http://rardance.com/sites/all/themes/zensubtheme/css/ie6.css?");</style>
 <![endif]-->
   <script type="text/javascript" src="misc/jquery.js"></script>
-<script type="text/javascript" src="http://rardance.com/misc/jquery.once.js?v=1.2"></script>
-<script type="text/javascript" src="http://rardance.com/misc/drupal.js?"></script>
+<script type="text/javascript" src="misc/jquery.once.js"></script>
+<script type="text/javascript" src="misc/drupal.js?"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"zensubtheme","theme_token":"W3MUs5GBgLD0_UbovNtHuzbP_yA2ii5OO7Ua9K89ldQ","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/date\/date_api\/date.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/user\/user.css":1,"modules\/views\/css\/views.css":1,"modules\/ctools\/css\/ctools.css":1,"sites\/all\/themes\/zensubtheme\/css\/html-reset.css":1,"sites\/all\/themes\/zensubtheme\/css\/wireframes.css":1,"sites\/all\/themes\/zensubtheme\/css\/layout-fixed.css":1,"sites\/all\/themes\/zensubtheme\/css\/page-backgrounds.css":1,"sites\/all\/themes\/zensubtheme\/css\/tabs.css":1,"sites\/all\/themes\/zensubtheme\/css\/pages.css":1,"sites\/all\/themes\/zensubtheme\/css\/blocks.css":1,"sites\/all\/themes\/zensubtheme\/css\/navigation.css":1,"sites\/all\/themes\/zensubtheme\/css\/views-styles.css":1,"sites\/all\/themes\/zensubtheme\/css\/nodes.css":1,"sites\/all\/themes\/zensubtheme\/css\/comments.css":1,"sites\/all\/themes\/zensubtheme\/css\/forms.css":1,"sites\/all\/themes\/zensubtheme\/css\/fields.css":1,"sites\/all\/themes\/zensubtheme\/css\/print.css":1,"sites\/all\/themes\/zensubtheme\/css\/ie7.css":1,"sites\/all\/themes\/zensubtheme\/css\/ie6.css":1}}});
