--- a/bio.html
+++ b/bio.html
@@ -26,11 +26,11 @@
 @import url("modules/system/system.menus.css?");
 @import url("modules/system/system.messages.css?");
 @import url("modules/system/system.theme.css?");</style>
-<style type="text/css" media="all">@import url("http://rardance.com/modules/date/date_api/date.css?");
-@import url("http://rardance.com/modules/field/theme/field.css?");
-@import url("http://rardance.com/modules/node/node.css?");
-@import url("http://rardance.com/modules/user/user.css?");
-@import url("http://rardance.com/modules/views/css/views.css?");</style>
+<style type="text/css" media="all">@import url("modules/date/date_api/date.css?");
+@import url("modules/field/theme/field.css?");
+@import url("modules/node/node.css?");
+@import url("modules/user/user.css?");
+@import url("modules/views/css/views.css?");</style>
 <style type="text/css" media="all">@import url("http://rardance.com/modules/ctools/css/ctools.css?");</style>
 <style type="text/css" media="all">@import url("sites/all/themes/zensubtheme/css/html-resetd41d.css?");
 @import url("sites/all/themes/zensubtheme/css/wireframesd41d.css?");
