testing removal of additional dependencies

--- a/bio.html
+++ b/bio.html
@@ -31,7 +31,7 @@
 @import url("modules/node/node.css?");
 @import url("modules/user/user.css?");
 @import url("modules/views/css/views.css?");</style>
-<style type="text/css" media="all">@import url("http://rardance.com/modules/ctools/css/ctools.css?");</style>
+<style type="text/css" media="all">@import url("modules/ctools/css/ctools.css?");</style>
 <style type="text/css" media="all">@import url("sites/all/themes/zensubtheme/css/html-resetd41d.css?");
 @import url("sites/all/themes/zensubtheme/css/wireframesd41d.css?");
 @import url("sites/all/themes/zensubtheme/css/layout-fixedd41d.css?");
@@ -48,11 +48,11 @@
 <style type="text/css" media="print">@import url("sites/all/themes/zensubtheme/css/printd41d.css?");</style>
 
 <!--[if lte IE 7]>
-<style type="text/css" media="all">@import url("http://rardance.com/sites/all/themes/zensubtheme/css/ie7.css?");</style>
+<style type="text/css" media="all">@import url("sites/all/themes/zensubtheme/css/ie7.css?");</style>
 <![endif]-->
 
 <!--[if lte IE 6]>
-<style type="text/css" media="all">@import url("http://rardance.com/sites/all/themes/zensubtheme/css/ie6.css?");</style>
+<style type="text/css" media="all">@import url("sites/all/themes/zensubtheme/css/ie6.css?");</style>
 <![endif]-->
   <script type="text/javascript" src="misc/jquery.js"></script>
 <script type="text/javascript" src="misc/jquery.once.js"></script>
