--- a/bio.html
+++ b/bio.html
@@ -27,11 +27,11 @@
 @import url("modules/system/system.messages.css?");
 @import url("modules/system/system.theme.css?");</style>
 <style type="text/css" media="all">@import url("modules/date/date_api/date.css");
-@import url("modules/field/theme/field.css?");
+@import url("modules/field/theme/field.css");
 @import url("modules/node/node.css?");
-@import url("modules/user/user.css?");
-@import url("modules/views/css/views.css?");</style>
-<style type="text/css" media="all">@import url("modules/ctools/css/ctools.css?");</style>
+@import url("modules/user/user.css");
+@import url("modules/views/css/views.css");</style>
+<style type="text/css" media="all">@import url("modules/ctools/css/ctools.css");</style>
 <style type="text/css" media="all">@import url("sites/all/themes/zensubtheme/css/html-resetd41d.css?");
 @import url("sites/all/themes/zensubtheme/css/wireframesd41d.css?");
 @import url("sites/all/themes/zensubtheme/css/layout-fixedd41d.css?");
