--- a/bio.html
+++ b/bio.html
@@ -30,7 +30,7 @@
 @import url("modules/field/theme/field.css");
 @import url("modules/node/node.css?");
 @import url("modules/user/user.css");
-@import url("modules/views/css/views.css");</style>
+@import url("modules/views/views.css");</style>
 <style type="text/css" media="all">@import url("modules/ctools/css/ctools.css");</style>
 <style type="text/css" media="all">@import url("sites/all/themes/zensubtheme/css/html-resetd41d.css?");
 @import url("sites/all/themes/zensubtheme/css/wireframesd41d.css?");
